tests/baselines/reference/privateNameStaticMethodClassExpression.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameStaticMethodClassExpression.ts(9,14): error TS18013: Property '#method' is not accessible outside class 'D' because it has a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNameStaticMethodClassExpression.ts(10,14): error TS18013: Property '#field' is not accessible outside class 'D' because it has a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNameStaticMethodClassExpression.ts (2 errors) ====
    const C = class D {
        static #field = D.#method();
        static #method() { return 42; }
        static getClass() { return D; }
        static getField() { return C.#field };
    }
    
    console.log(C.getClass().getField());
    C.getClass().#method; // Error
                 ~~~~~~~
!!! error TS18013: Property '#method' is not accessible outside class 'D' because it has a private identifier.
    C.getClass().#field; // Error
                 ~~~~~~
!!! error TS18013: Property '#field' is not accessible outside class 'D' because it has a private identifier.
    
    